--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 
-<header class="header">
+<header class="header header--fixed">
 <div class="wrapper">
     <div class="header__logo">
         <div class="header__logo__graphic icon icon--kaplan-logo">Kaplan International English</div>
@@ -72,7 +72,7 @@
                 <a href="#"> <span class="icon icon--phone"></span> +44 (0)20 7045 5000  </a>
             </li>
 
-            <li><a href="#"> <span class="icon icon--mail"></span>  CONTACT US  </a></li>
+            <li><a href="#Act-now"> <span class="icon icon--mail"></span>  CONTACT US  </a></li>
         </ul>
     </nav>
     </div>
@@ -99,7 +99,7 @@
                     </div>
                 </div>
 
-                <div class="large-hero__act-now">
+                <div id="Act-now" class="large-hero__act-now">
                     <h1 class="large-hero__act-now-title">ACT NOW</h1>
                     <h4 class="large-hero__act-now-sub-title">TO GUARANTEE 2016 PRICES!</h4>
                 </div>
